<resources>
    <string name="app_name">City Guide App</string>
    <string name="logo_name">The Guide</string>
    <string name="slogan_name">We will get you to your destination</string>
    <string name="powered_by">Powered By Lockins</string>

    <!-- Strings for On Boarding Screen -->

    <!-- Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!-- Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or within the specific city....</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shop registered with us....</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by....</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry....</string>

    <!-- Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="lets_get_started">Lets Get Started</string>

    <!-- Strings for Dashboard -->

    <!-- categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurant</string>
    <string name="shops">Shops</string>
    <string name="bank">Banks</string>
    <string name="airports">Airports</string>

    <!-- Title and Description-->
    <string name="featured_location">All Featured Locations</string>
    <string name="featured_location_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_location">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search....</string>
    <string name="education">Education</string>
    <string name="home">Home</string>
    <string name="log_in">LogIn</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log_Out</string>
    <string name="new_places">New Places</string>
    <string name="all_categories">All Categories</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate_Us</string>
    <string name="car_rent">Car rent</string>
    <string name="expand_all">Expand all</string>
    <string name="grow_your_business">Grow Your Business</string>
    <string name="sign_up">Sign Up</string>
    <string name="how_we_work">How we work?</string>
    <string name="we_will_help_you_grow_your_business">We will help you grow your business</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create-Account</string>
    <string name="enter_full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_your_age">Select Your Age</string>
    <string name="code">Code</string>
    <string name="verification">Verification</string>
    <string name="enter_one_time_password_sent_to_you">Enter One Time-Password sent to you</string>
    <string name="verify_code">Verify Code</string>
    <string name="forget_password">Forget Password</string>
    <string name="forget_password_details">Provide Your Accounts email to reset password</string>
    <string name="make_selection">Make Selection</string>
    <string name="which_contact_details_should_be_used_to_reset_your_password">Which contact details should be used to reset your password?</string>
    <string name="via_sms">via sms:</string>
    <string name="via_mail">via_mail</string>
    <string name="the_guide">The Guide</string>


    Create\nAccount


</resources>