<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.RetailerStartUpScreen"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@drawable/business_image"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grow_your_business"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textAllCaps="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_will_help_you_grow_your_business"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="170dp">

            <Button
                android:id="@+id/login_button"
                android:onClick="callLoginScreen"
                android:textColor="@color/black"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:layout_weight="1"
                android:transitionName="transition_login"/>

            <Button
                android:onClick="callSignUpScreen"
                android:id="@+id/signup_button"
                android:textColor="@color/black"
                android:layout_marginEnd="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_weight="1"
                android:transitionName="transition_sign_up"/>

        </LinearLayout>

        <Button
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_we_work"
            android:background="#00000000"
            android:textColor="@color/black"/>

    </LinearLayout>


</ScrollView>